Add another clipping test

--- a/meson.build
+++ b/meson.build
@@ -1,3 +1,5 @@
 project('thor-test', 'cpp', default_options: {'cpp_std': 'c++20'})
 
-executable('thor-test', 'thor-test.cpp', dependencies: dependency('thorvg'))
+thorvg = dependency('thorvg')
+executable('thor-test', 'thor-test.cpp', dependencies: thorvg)
+executable('clip-curve', 'clip-curve.cpp', dependencies: thorvg)
